# aiph2025

./: .gitignore  DETAILED_PROJECT_GUIDE.md  README.md  package-lock.json
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  security.py
backend/app/db/: mongo.py
backend/app/models/: user.py
backend/app/routers/: auth.py  profile.py
ml/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ml/app/: config.py  main.py  prompts.py
ml/app/auth/: jwt_utils.py
ml/app/db/: mongo.py
ml/app/models/: __init__.py  match_models.py  schemas.py  trajectory_models.py
ml/app/repos/: chat_repos.py  match_repos.py  trajectory_repo.py
ml/app/routers/: chat.py  match.py  profile.py  sessions.py  trajectory.py
ml/app/services/: chat_service.py  gap_service.py  learning_service.py  match_service.py  planner_service.py  profile_service.py  trajectory_service.py  yandex_sdk.py
ml/app/startup/: load_embeddings.py  seed_courses.py  seed_vacancies.py
ml/data/: courses.parquet
ml/data/embeddings/courses/: emb_0-99.npy  emb_100-199.npy  emb_1000-1099.npy  emb_1100-1199.npy  emb_1200-1299.npy  emb_1300-1399.npy  emb_1400-1499.npy  emb_1500-1599.npy  emb_1600-1699.npy  emb_1700-1799.npy  emb_1800-1899.npy  emb_1900-1999.npy  emb_200-299.npy  emb_2000-2099.npy  emb_2100-2199.npy  emb_2200-2299.npy  emb_2300-2399.npy  emb_2400-2499.npy  emb_2500-2599.npy  emb_2600-2699.npy  emb_2700-2799.npy  emb_2800-2899.npy  emb_2900-2999.npy  emb_300-399.npy  emb_3000-3099.npy  emb_3100-3199.npy  emb_400-499.npy  (+9 more)
(+495 files in other folders)
