[project]
name = "career-coach-interview"
version = "0.1.0"
description = "Interview module for career coach: FastAPI + LangGraph + YandexGPT + MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "motor",
  "pydantic>=2",
  "pydantic-settings",
  "orjson",
  "langchain>=0.2.11",
  "langchain-community>=0.2.10",
  "langgraph>=0.2.23",
  "yandexcloud>=0.358.0",
  "ipykernel>=6.30.1",
  "yandex-cloud-ml-sdk>=0.15.0",
  "scipy>=1.16.1",
  "pandas>=2.3.2",
  "polars>=1.33.0",
  "tqdm>=4.67.1",
  "plotly>=6.3.0",
  "scikit-learn>=1.7.1",
  "nbformat>=5.10.4",
  "faiss-cpu>=1.12.0",
  "pyarrow>=21.0.0",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "httpx",
  "ruff",
]


